--- a/pom.xml
+++ b/pom.xml
@@ -6,11 +6,12 @@
 
   <groupId>com.aabvin.automobile</groupId>
   <artifactId>cars</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>2.0-SNAPSHOT</version>
   <packaging>war</packaging>
 
   <name>cars Maven Webapp</name>
   <url>http://www.example.com</url>
+  <!-- New dependacy -->
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
